kustomize/traefik/ingress.yml

# IngressRoute for Kafka Cruise Control
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-cruis-control-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/cruiscontrol`)
      kind: Rule
      services:
        - name: kafka-cruis-control
          port: 8090

---
# IngressRoute for Kafka UI
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kafka-ui-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/kafka-ui`)
      kind: Rule
      services:
        - name: kafka-ui
          port: 8080


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kafka-cruise-control
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: "web"
# spec:
#   ingressClassName: "traefik"
#   rules:
#     - host:
#       http:
#         paths:
#           - path: /cruiscontrol
#             pathType: Prefix
#             backend:
#               service:
#                 name: kafka-cruis-control
#                 port:
#                   number: 8090
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kafka-ui-ingress
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: "web"
# spec:
#   ingressClassName: "traefik"
#   rules:
#     - host:
#       http:
#         paths:
#           - path: /kafka-ui
#             pathType: Prefix
#             backend:
#               service:
#                 name: kafka-ui
#                 port:
#                   number: 8080
          # - path: /cruiscontrol
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: kafka-cruise-control
          #       port:
          #         number: 8090
